# extra-forever

./: .gitignore  .pre-commit-config.yaml  .tiltignore  AGENTS.md  README.md  Tiltfile  api.py  cli.py  hello.py  models.py  pyproject.toml  sample-categories.jsonl  sample-messages.jsonl
.github/workflows/: app.yml  ci.yml  ui.yml
app/: config.py  deps.py
app/controllers/: bootstrap_controller.py  categories_controller.py  messages_controller.py
app/managers/: category_manager.py  message_manager.py
app/services/: __init__.py  bootstrap_service.py  categories_service.py  classification_service.py  embedding_service.py  messages_service.py
app/services/classification/: __init__.py  classification_service.py  strategies.py
app/stores/: sqlite_store.py
app/utils/: jsonl_parser.py
tests/: README.md  conftest.py  test_category_model.py  test_models.py
tests/controllers/: test_categories_controller.py  test_messages_classification_api.py  test_messages_controller.py  test_messages_controller_crud.py
tests/managers/: test_category_manager.py  test_message_manager.py  test_message_manager_crud.py
tests/services/: test_bootstrap_service.py  test_categories_service.py  test_classification_service.py  test_llm_classification_strategy.py  test_message_parsing.py  test_messages_service.py  test_messages_service_crud.py
tests/stores/: test_sqlite_store.py
tests/utils/: test_jsonl_parser.py
ui/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: api.ts  app.tsx  main.tsx  style.css  types.ts
ui/src/components/: CategoryCard.tsx  CategoryList.tsx  CategoryModal.tsx  CreateCategoryModal.tsx  MessageCard.tsx  MessageList.tsx  MessageRow.tsx
