[project]
name = "extra-forever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.44",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
extra = "cli:app"

[tool.setuptools]
py-modules = ["cli", "models"]

[tool.uv]
package = true
